Ajustes site fba

--- a/html/www-fba/en/tutoriais/index.html
+++ b/html/www-fba/en/tutoriais/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FBA PrepMaster - We create your Amazon shipment</title>
+    <title>FBA PrepMaster - Tutoriais</title>
     <meta property="og:image" content="../../static/img/logo-en-old.png"/>
     <meta name="description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
     <meta property="og:title" content="FBA PrepMaster"/>
@@ -45,14 +45,15 @@
     })(window,document,'script','dataLayer','GTM-523WMGM');</script>
     <!-- End Google Tag Manager -->
 
+    <script src="/static/jsi18n/pt/djangojs.js"></script>
 </head>
 
 <body id="page-top" class="index red-br termos en">
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-523WMGM"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top affix">
         <div class="container">
@@ -61,7 +62,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll logo-site" href="/pt/">fba prepmaster logo</a><span>By <strong>VOIRedirect</strong></span>
+                <a class="navbar-brand page-scroll logo-site" href="/pt/">FBAPrep master logo</a><span>By <strong>VOIRedirect</strong></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,10 +72,10 @@
                         <a title="Home" href="/pt/">Home</a>
                     </li>
                     <li>
-                        <a title="Cadastre-se" href="/pt/usuario/cadastro">Cadastre-se</a>
+                        <a class="page-scroll" href="/pt/tutorial-plataforma">Tutorial</a>
                     </li>
                      <li>
-                        <a title="Cadastre-se" href="/pt/tutorial-plataforma">Tutorial</a>
+                        <a title="Cadastre-se" href="/pt/usuario/cadastro">Cadastre-se</a>
                     </li>
                     <li>
                         <a title="Login" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
@@ -82,7 +83,7 @@
 
                 </ul>
 
-                <!--<a title="Translate to english" class="bandeira bandeira-en" href="/en/terms-and-conditions">Translate to English</a>-->
+                <!--<a title="Translate to english" class="bandeira bandeira-en" href="/en/help/">Translate to English</a>-->
 
             </div>
             <!-- /.navbar-collapse -->
@@ -92,59 +93,60 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-1 sidebar"></div>
-                <div class="col-md-10 margin-top-40">
-                    <h1 class="page-header"><i class="fa fa-file-text"></i> We create Your Shipment on Amazon</h1>
-                    <section id="servicese">
+                <h1 class="page-header margin-top-40"><i class="fa fa-file-text"></i> Tutorias da plataforma</h1>
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como se cadastrar</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/hjz1goJRLBw?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section><hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo para que serve o código de usuário</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/efCW5YxnDm0?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como cadastrar um produto</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F0L1rjQ9t4A?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Enviando o label dos produtos)</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F3sxVg-6P0s?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section><
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Finalizando envio)</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/gsHYPycYL-g?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </section>
+       <!-- Contact Section -->
+    <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <h4 class="subheading">Não se preocupe mais em criar envios para Amamzon</h4>
-                    <p class="text-muted">Nós criamos o seu envio na Amazon. Nos dê acesso a sua conta (Apenas na parte de shipment) e fazemos todos o processo. Basta apontar na plataforma quais produtos deseja enviar do seu estoque e faremos todo o resto.
-                    Agora só se preocupe em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
-                    <p><a class="download" href="/pt/tutorial-plataforma"><i class="fa fa-link"></i> Veja como utilizar nossa plataforma de envio</a></p>
-                    <div class="col-md-12">
-                        <p>
-                            <a class="btn btn-danger" href="#box-assinar"><i class="fa fa-check-square-o"></i> Assinar agora $ 24,90/mês</a>
-                        </p>
-                         <div class="alert alert-success col-md-10">
-                             <p><strong>Assinante VOI Prime já possuí esse serviço na sua assinatura.</strong></p>
-                         </div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <img src="../../../static/img/projects/8.png" width="80%" />
-                </div>
-            </div><br><br>
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="../../../static/img/projects/1.png" class="margin-top-40" width="80%" />
-                </div>
-                <div class="col-md-7">
-                    <h4 class="subheading">Como nos dar acesso?</h4>
-                    <p class="text-muted">veja abaixo um vídeo explicativo de como nos dar acesso a parte de shipment da sua conta na Amazon.</p>
-                    <p><strong></strong></p>
-                    <div class="bs-example col-md-12">
-                     <div class="alert alert-warning">
-                         <p><strong><i class="fa fa-info-circle"></i> Importante!</strong></p>
-                         <p>Nós não teremos acesso a outras partes da sua conta, tais como: vendas, financeiro, etc.</p>
-                     </div>
-                  </div>
-                  <iframe width="100%" height="320" src="https://www.youtube.com/embed/7oES14M6jeE?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                </div>
-
-            </div><br><br>
-            <div class="row" id="box-assinar">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-center">Assinar Agora</h2>
-                </div>
-                <script src="https://gumroad.com/js/gumroad-embed.js"></script>
-                <div class="gumroad-product-embed" data-gumroad-product-id="gSLJQ"><a href="https://gumroad.com/l/gSLJQ">Loading...</a></div> </div>
-            </div>
-    </section>
-                </div>
-                <div class="col-md-1 sidebar">
-
+                    <h2 class="section-heading">Fale Conosco</h2>
+                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Envie um email para <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a> </h3>
                 </div>
             </div>
         </div>
@@ -175,7 +177,20 @@
             </div>
         </div>
     </footer>
+        <!-- jQuery -->
+    <script src="../../../static/externo/jquery/jquery.min.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../../../static/externo/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="../../../static/js/jqBootstrapValidation.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="../../../static/js/applications.js"></script>
 </body>
 
 </html>
