--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FBA PrepMaster - Termos e condicoes</title>
+    <title>FBA PrepMaster - Home</title>
     <meta property="og:image" content="../../static/img/logo-en-old.png"/>
     <meta name="description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
     <meta property="og:title" content="FBA PrepMaster"/>
