--- a/html/www-fba/pt/tutorial-plataforma/index.html
+++ b/html/www-fba/pt/tutorial-plataforma/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FBA PrepMaster - Termos e condicoes</title>
+    <title>FBA PrepMaster - Tutoriais</title>
     <meta property="og:image" content="../../static/img/logo-en-old.png"/>
     <meta name="description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
     <meta property="og:title" content="FBA PrepMaster"/>
@@ -93,50 +93,81 @@
     <section>
         <div class="container">
             <div class="row">
-                <h1 class="page-header margin-top-40"><i class="fa fa-file-text"></i> Tutorias da plataforma</h1>
-                <section>
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">Veja abaixo como se cadastrar</h3><br>
+                <h1 class="page-header margin-top-40"><i class="fa fa-file-text"></i> Tutorias</h1>
+                <div class="panel-group" id="accordion">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="download"><i class="fa fa-list-ul"></i> Como se cadastrar na plataforma?</a>
+                            </h4>
                         </div>
-                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/hjz1goJRLBw?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                    </div>
-                </section><hr />
-                <section>
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">Veja abaixo para que serve o código de usuário</h3><br>
+                        <div id="collapseOne" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/hjz1goJRLBw?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
                         </div>
-                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/efCW5YxnDm0?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
-                </section>
-                <hr />
-                <section>
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">Veja abaixo como cadastrar um produto</h3><br>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapsetwo" class="download"><i class="fa fa-list-ul"></i> Para que serve o código de usuário?</a>
+                            </h4>
                         </div>
-                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F0L1rjQ9t4A?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                    </div>
-                </section>
-                <hr />
-                <section>
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Enviando o label dos produtos)</h3><br>
+                        <div id="collapsetwo" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/efCW5YxnDm0?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
                         </div>
-                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F3sxVg-6P0s?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
-                </section><
-                <hr />
-                <section>
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Finalizando envio)</h3><br>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapsethree" class="download"><i class="fa fa-list-ul"></i> Como cadastrar um produto?</a>
+                            </h4>
                         </div>
-                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/gsHYPycYL-g?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        <div id="collapsethree" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F0L1rjQ9t4A?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
+                        </div>
                     </div>
-                </section>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapsefour" class="download"><i class="fa fa-list-ul"></i> Como criar envio FBA (Enviando o label dos produtos)?</a>
+                            </h4>
+                        </div>
+                        <div id="collapsefour" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F3sxVg-6P0s?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapsefive" class="download"><i class="fa fa-list-ul"></i> Como criar envio FBA (Finalizando envio)?</a>
+                            </h4>
+                        </div>
+                        <div id="collapsefive" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/gsHYPycYL-g?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapsesix" class="download"><i class="fa fa-list-ul"></i> Como configurar minha conta para que o FBAPrepMaster possa acessar e criar meus envios?</a>
+                            </h4>
+                        </div>
+                        <div id="collapsesix" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/7oES14M6jeE?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
