--- a/html/www-fba/pt/create-az-shipment/index.html
+++ b/html/www-fba/pt/create-az-shipment/index.html
@@ -107,9 +107,9 @@
                         <p>
                             <a class="btn btn-danger" href="#box-assinar"><i class="fa fa-check-square-o"></i> Assinar agora $ 24,90/mês</a>
                         </p>
-                         <div class="alert alert-success col-md-10">
+                         <!--<div class="alert alert-success col-md-10">
                              <p><strong>Assinante VOI Prime já possuí esse serviço na sua assinatura.</strong></p>
-                         </div>
+                         </div>-->
                     </div>
                 </div>
                 <div class="col-md-5">
