--- a/html/www-fba/en/privacy-policy/index.html
+++ b/html/www-fba/en/privacy-policy/index.html
@@ -124,7 +124,7 @@
                 <div class="col-md-7"><br /><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="/static/img/logo-en-maior.png" width="20px" /> by VOI Services</a>
-                    <span class="copyright"><strong>Adress:</strong>  | <strong>Phone:</strong> 1 978 992 8417</span>
+                    <span class="copyright"><strong>Adress:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>Phone:</strong> 1 978 992 8417</span>
                 --></div>
                 <div class="col-md-2">
                     <ul class="list-inline quicklinks">
