Ajustes lançamnto USA

--- a/html/www-lots/en/how-it-works/index.html
+++ b/html/www-lots/en/how-it-works/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>VOI Services - Terms and conditions</title>
+    <title>My Amazon Partner - Terms and conditions</title>
     <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
-    <meta property="og:title" content="VOI Services"/>
-    <meta property="og:site_name" content="VOI Services"/>
-    <meta property="og:description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta name="description" content="My Amazon Partner. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:title" content="My Amazon Partner"/>
+    <meta property="og:site_name" content="My Amazon Partner"/>
+    <meta property="og:description" content="My Amazon Partner. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
+                <a href="/" class="navbar-brand page-scroll logo-services-img">
                     <img src="../../../static/img/logo_sup.png"><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
                 </a>
             </div>
@@ -181,11 +181,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <span class="copyright">Copyright © VOI Services 2018</span>
+                    <span class="copyright">Copyright © My Amazon Partner 2020</span>
                 </div>
                 <div class="col-md-7"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px" /> by VOI Services</a>
+                        <img src="/static/img/logo-en-maior.png" width="20px" /> by My Amazon Partner</a>
                     <span class="copyright"><strong>Adress:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>Phone:</strong> 1 978 992 8417</span>
                 --></div>
                 <div class="col-md-2">
@@ -208,7 +208,7 @@
                     <h4 class="modal-title">Contact us</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Send us an email to <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a>.</p>
+                    <p>Send us an email to <a class="download" href="mailto:cs@myamzpartner.com">cs@myamzpartner.com</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
