--- a/html/www-lots/en/privacy-policy/index.html
+++ b/html/www-lots/en/privacy-policy/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>VOI Services - Terms and conditions</title>
+    <title>My Amazon Partner - Terms and conditions</title>
     <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
-    <meta property="og:title" content="VOI Services"/>
-    <meta property="og:site_name" content="VOI Services"/>
-    <meta property="og:description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta name="description" content="My Amazon Partner. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:title" content="My Amazon Partner"/>
+    <meta property="og:site_name" content="My Amazon Partner"/>
+    <meta property="og:description" content="My Amazon Partner. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
+                <a href="/" class="navbar-brand page-scroll logo-services-img">
                     <img src="../../../static/img/logo_sup.png"><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
                 </a>
             </div>
@@ -104,11 +104,11 @@
                 <div class="col-md-10">
                     <h1 class="page-header"><i class="fa fa-file-text"></i> Website Privacy Policy</h1>
                     <div>
-                        <p>VOI Services is committed to raise customer awareness of your information collected and used to provide a better browsing experience. Therefore, we present our privacy policy, which aims to clarify the use of this information. By visiting www.voiservices.com, you accept the practices described in this privacy policy.</p>
-                        <p>VOI Services is committed to the privacy and security of its customers throughout the process of browsing and purchasing through the site. Customer's registration data is not sold, exchanged or disclosed to third parties, except when this information is necessary for the delivery process, for collection or for participation in promotions requested by customers. Your personal information will be essential to ensure that your order arrives safely on Amazon according to our delivery time.</p>
-                        <p>VOI Services uses cookies and information from its navigation (browser session) in order to draw a profile of the public that visits the site and always improve our service, products, contents and guarantee the best offers and promotions for you. Throughout this process we will keep your information in absolute secrecy. It is worth remembering that your data is registered by VOI Services in an automated way, dispensing with human manipulation.</p>
+                        <p>My Amazon Partner is committed to raise customer awareness of your information collected and used to provide a better browsing experience. Therefore, we present our privacy policy, which aims to clarify the use of this information. By visiting www.voiservices.com, you accept the practices described in this privacy policy.</p>
+                        <p>My Amazon Partner is committed to the privacy and security of its customers throughout the process of browsing and purchasing through the site. Customer's registration data is not sold, exchanged or disclosed to third parties, except when this information is necessary for the delivery process, for collection or for participation in promotions requested by customers. Your personal information will be essential to ensure that your order arrives safely on Amazon according to our delivery time.</p>
+                        <p>My Amazon Partner uses cookies and information from its navigation (browser session) in order to draw a profile of the public that visits the site and always improve our service, products, contents and guarantee the best offers and promotions for you. Throughout this process we will keep your information in absolute secrecy. It is worth remembering that your data is registered by My Amazon Partner in an automated way, dispensing with human manipulation.</p>
                         <p>In order for these data to remain intact, we do not expressly advise the disclosure of your password to third parties, even to friends and relatives.</p>
-                        <p>VOI Services is not responsible for the delivery of all sent emails, since some servers block certain messages.</p>
+                        <p>My Amazon Partner is not responsible for the delivery of all sent emails, since some servers block certain messages.</p>
                     </div>
                 </div>
                 <div class="col-md-1 sidebar"></div>
@@ -119,11 +119,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3"><br />
-                    <span class="copyright">Copyright © VOI Services 2018</span>
+                    <span class="copyright">Copyright © My Amazon Partner 2020</span>
                 </div>
                 <div class="col-md-7"><br /><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px" /> by VOI Services</a>
+                        <img src="/static/img/logo-en-maior.png" width="20px" /> by My Amazon Partner</a>
                     <span class="copyright"><strong>Adress:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>Phone:</strong> 1 978 992 8417</span>
                 --></div>
                 <div class="col-md-2">
@@ -146,7 +146,7 @@
                     <h4 class="modal-title">Contact us</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Send us an email to <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a>.</p>
+                    <p>Send us an email to <a class="download" href="mailto:cs@myamzpartner.com">cs@myamzpartner.com</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
