--- a/html/www-lots/pt/ajuda/index.html
+++ b/html/www-lots/pt/ajuda/index.html
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Fale Conosco</h2>
-                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Envie um email para <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a> </h3>
+                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Envie um email para <a class="download" href="mailto:cs@myamzpartner.com">cs@myamzpartner.com</a> </h3>
                 </div>
             </div>
         </div>
